# skillvitals

./: LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: release.yml  tests.yml
examples/: tasks.yaml
src/skillvitals/: cli.py  llm.py  metrics.py  report.py  run.py  skill.py
tests/: test_cli.py  test_metrics.py  test_report.py  test_run.py  test_skill.py
tests/fixtures/: cases.yaml  sample_skill.md
