[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-vitals"
version = "0.1.0"
description = "Vital signs for your agent skills: does it fire when it should, and does it actually help?"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["pyyaml>=6", "openai>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
skillvitals = "skillvitals.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skillvitals"]

[tool.pytest.ini_options]
pythonpath = ["src"]
